testdata/baselines/reference/submodule/compiler/defaultPropsEmptyCurlyBecomesAnyForJs.errors.txt
component.js(2,28): error TS8010: Type annotations can only be used in TypeScript files.


==== library.d.ts (0 errors) ====
    export class Foo<T = {}, U = {}> {
        props: T;
        state: U;
        constructor(props: T, state: U);
    }
    
==== component.js (1 errors) ====
    import { Foo } from "./library";
    export class MyFoo extends Foo {
                               ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        member;
    }
    
==== typed_component.ts (0 errors) ====
    import { MyFoo } from "./component";
    export class TypedFoo extends MyFoo {
        constructor() {
            super({x: "string", y: 42}, { value: undefined });
            this.props.x;
            this.props.y;
            this.state.value;
            this.member;
        }
    }